add log in page

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,20 @@
   font-weight: bold;
   color: rgb(235, 102, 190);
 }
+
+.card {
+  background-color: cadetblue !important;
+}
+
+span {
+  margin-top: 2px;
+}
+
+button {
+  border-radius: 8px !important;
+}
+
+input {
+  margin-left: 5px !important;
+  border-radius: 5px;
+}
