--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 
 .card {
   background-color: cadetblue !important;
+  height : 250px !important;
 }
 
 button {
@@ -31,4 +32,8 @@ input {
 
 .ManulaMar {
   margin-top: 10px !important;
+}
+
+.card span label{
+  margin-top:10px;
 }
