--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,12 @@ span .btn {
   object-fit: cover;
 }
 
+.chat_icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .chat_icons span img {
   width: 30px;
 }
@@ -145,12 +151,26 @@ span .btn {
 
 .center {
   display: flex;
+  height: 68vh;
   border-bottom: 0.5px solid rgba(82, 78, 78, 0.336);
 }
+
+.lower_div {
+  display: flex;
+  margin-top: 5px;
+}
+
 .text_area span img {
   width: 24px;
 }
 
 .text_area input {
-  width: 100px;
+  width: 177px;
+}
+
+.text_area {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-end;
 }
