--- a/src/App.css
+++ b/src/App.css
@@ -230,7 +230,21 @@ span .btn {
 
 /* chat Center */
 
-.messagesent {
-  display: flex;
-  margin-left: 350px;
+.message {
+  padding: 10px;
+  margin: 5px 0;
+  border-radius: 10px;
+  max-width: 60%;
+}
+
+.sent {
+  background-color: #dcf8c6;
+  align-self: flex-end;
+  text-align: right;
+}
+
+.received {
+  background-color: #fff;
+  align-self: flex-start;
+  text-align: left;
 }
