--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@
   color: rgb(233, 106, 47);
 }
 
-.sig_title span a {
-  text-decoration: none;
+.sig_title span Link {
+  /* text-decoration: none; */
   font-size: 16px;
   margin-left: 15px;
 }
@@ -151,8 +151,11 @@ span .btn {
 
 .center {
   display: flex;
+  flex-direction: column;
   height: 68vh;
   border-bottom: 0.5px solid rgba(82, 78, 78, 0.336);
+  padding: 15px;
+  overflow-y: auto;
 }
 
 .lower_div {
